# SilkroadProxySDK

./: CMakeLists.txt  LICENSE  README.md
include/: base_plugin.h  stream_utility.h
src/: base_plugin.cpp  main.cpp
